# grav-launcher

./: Cargo.toml  README.md  flake.nix  justfile
.github/: release-drafter.yml
.github/workflows/: release.yaml  rust.yml
src/: app.rs  event.rs  hash.rs  launcher.rs  main.rs  ui.rs  update.rs
src/ui/: list.rs  log.rs
