[package]
name = "grav-launcher"
version = "0.1.1"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
eyre = "0.6.12"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10.8"
throbber-widgets-tui = "0.8.0"
tui-widget-list = "0.13.2"
xdg = "2.5.2"
